[package]
name = "win-etl"
version = "0.1.0"
edition = "2021"
authors = ["Marvin Gudel <github.marvin@gudel.org>"]
license = "MIT"
description = "A plattform agnostic library to parse Windows Event Trace Logs without Windows dependencies."

[dependencies]
bitflags = "2.4.1"
num_enum = "0.7.2"
byteorder = "1.5.0"
log = "0.4.20"
widestring = "1.0.2"
win-etw-event = { git = "ssh://git@github.com:internet-sicherheit/win-etw-event-rs.git" }
